--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.0",
     "@mui/material": "^6.1.0",
-    "next": "14.2.11",
-    "react": "^18",
-    "react-dom": "^18"
+    "next": "^14.2.13",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "swiper": "^11.1.14"
   },
   "devDependencies": {
     "@types/node": "^20",
